# opendbc-ag

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: _cosign-sign.yml  _sbom.yml  _slsa.yml  ci.yml  consistency.yml  coverage.yml  release.yml
corpus/: README.md
docs/: README.md  architecture.md  cabana-for-ag-setup.md  code-of-conduct.md  coverage.md  faq.md  legal-context.md  signal-naming-guide.md
extractions/: AGISOSTACK_PIN.txt  README.md  j1939_ag_pgns.json  vdma_pgn_index.json
opendbc_ag/dbc/: README.md  iso11783_from_agisostack.dbc  iso11783_from_vdma.dbc  j1939_ag_subset.dbc
opendbc_ag/tests/: README.md  test_extract_agisostack.py  test_extract_j1939_ag.py  test_extract_vdma.py  test_scope_policy.py  test_smoke.py
opendbc_ag/tests/fixtures/: vdma_pgn_sample.html
opendbc_ag/tools/: README.md  _dbc_utils.py  _scope_policy.py  anonymize.py  coverage_report.py  dbc_inferrer.py  extract_agisostack.py  extract_j1939_ag.py  extract_vdma.py
scripts/: check_dbc_policy.py  preflight.sh
