[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendbc-ag"
version = "0.1.0"
description = "OSS agricultural-CAN DBC repository — ISO 11783 + J1939 ag subset, MIT, pure-standard."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ctyoungb" }]
keywords = ["agriculture", "isobus", "iso-11783", "j1939", "can-bus", "dbc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "canmatrix>=1.0",
    "cantools>=40",
    "python-can>=4.4",
    "numpy>=2",
    "requests>=2.30",
    "beautifulsoup4>=4.12",
    "lxml>=5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Repository = "https://github.com/in-loop/opendbc-ag"

[tool.setuptools.packages.find]
include = ["opendbc_ag*"]

[tool.pytest.ini_options]
testpaths = ["opendbc_ag/tests"]
python_files = ["test_*.py"]
